Added logo header, spaced header better

--- a/src/styles/topbarStyles.css
+++ b/src/styles/topbarStyles.css
@@ -1,3 +1,20 @@
 .textEntry {
   margin: 5px;
 }
+
+.logo {
+  height: 50px;
+  margin: 10px;
+}
+
+.logoHeader {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.topBar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
