--- a/src/styles/contentStyles.css
+++ b/src/styles/contentStyles.css
@@ -15,6 +15,23 @@
   bottom: 2%;
 }
 
+.statCard {
+  margin: 10px;
+  width: 31%;
+  min-width: 270px;
+}
+
+.statDiv {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+}
+/*
+classes for the css transitions fo cards
+*/
 .moveCard-enter {
   max-height: 0px !important;
   opacity: 0.1;
