Added dark mode to the entire app

--- a/src/styles/contentStyles.css
+++ b/src/styles/contentStyles.css
@@ -15,6 +15,12 @@
   bottom: 2%;
 }
 
+.toggleDark {
+  position: fixed !important;
+  left: 2%;
+  bottom: 2%;
+}
+
 .statCard {
   margin: 10px;
   width: 31%;
