--- a/src/Components/NotesApp/Content/styles.css
+++ b/src/Components/NotesApp/Content/styles.css
@@ -1,39 +1,22 @@
 .contentContainer {
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-.card {
+.statDiv {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   width: 80%;
-  margin-top: 10px;
+  justify-content: space-around;
 }
 
 .addNote {
   position: fixed !important;
   right: 2%;
   bottom: 2%;
-}
-
-.toggleDark {
-  position: fixed !important;
-  left: 2%;
-  bottom: 2%;
-}
-
-.statCard {
-  margin: 10px;
-  width: 31%;
-  min-width: 270px;
-}
-
-.statDiv {
-  width: 80%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-around;
 }
 /*
 classes for the css transitions fo cards
