--- a/src/styles/contentStyles.css
+++ b/src/styles/contentStyles.css
@@ -1,22 +1,39 @@
 .contentContainer {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  flex-direction: column;
 }
 
-.statDiv {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+.card {
   width: 80%;
-  justify-content: space-around;
+  margin-top: 10px;
 }
 
 .addNote {
   position: fixed !important;
   right: 2%;
   bottom: 2%;
+}
+
+.toggleDark {
+  position: fixed !important;
+  left: 2%;
+  bottom: 2%;
+}
+
+.statCard {
+  margin: 10px;
+  width: 31%;
+  min-width: 270px;
+}
+
+.statDiv {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
 }
 /*
 classes for the css transitions fo cards
